--- a/themes/hello-friend/source/css/variables.css
+++ b/themes/hello-friend/source/css/variables.css
@@ -1,17 +1,17 @@
 :root {
   /* light theme color */
-  --light-background: #fff;
-  --light-background-secondary: #eaeaea;
-  --light-color: #222;
-  --light-color-secondary: #999;
-  --light-border-color: #dcdcdc;
+  --dark-background: #fff;
+  --dark-background-secondary: #eaeaea;
+  --dark-color: #222;
+  --dark-color-secondary: #999;
+  --dark-border-color: #dcdcdc;
 
   /* dark theme colors */
-  --dark-background: #222222;
-  --dark-background-secondary: #3b3d42;
-  --dark-color: #CBCCD2;
-  --dark-color-secondary: #73747b;
-  --dark-border-color: #4a4b50;
+  --light-background: #222222;
+  --light-background-secondary: #3b3d42;
+  --light-color: #CBCCD2;
+  --light-color-secondary: #73747b;
+  --light-border-color: #4a4b50;
 
   /* variables for js, must be the same as these in @custom-media queries */
   --phoneWidth: (max-width: 684px);
