--- a/themes/hello-friend/layouts/_default/baseof.html
+++ b/themes/hello-friend/layouts/_default/baseof.html
@@ -6,6 +6,7 @@
   {{ end }}
   {{ partial "head.html" . }}
   <link rel="icon" href="{{ .Site.Params.Icon }}">
+  {{ partial "mathjax_support.html" . }}
 </head>
 <body>
 <div class="container">
