--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,53 +1,60 @@
 ///
-/// Dimension by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
-/* Type */
+/* Typography */
 
 	html {
-		font-size: 16pt;
+		font-size: 18pt;
 
-		@include breakpoint(xlarge) {
+		@include breakpoint('<=xlarge') {
+			font-size: 13pt;
+		}
+
+		@include breakpoint('<=medium') {
+			font-size: 14pt;
+		}
+
+		@include breakpoint('<=small') {
 			font-size: 12pt;
 		}
 
-		@include breakpoint(small) {
+		@include breakpoint('<=xsmall') {
 			font-size: 11pt;
 		}
+	}
 
-		@include breakpoint(xxsmall) {
-			font-size: 10pt;
-		}
+	body {
+		background-color: _palette(bg);
+		color: _palette(fg);
 	}
 
 	body, input, select, textarea {
-		color: _palette(fg);
+		color: _palette(fg-bold);
 		font-family: _font(family);
-		font-weight: _font(weight);
 		font-size: 1rem;
-		line-height: 1.65;
+		font-weight: _font(weight);
+		letter-spacing: _font(kerning);
+		line-height: 2;
 	}
 
 	a {
-		@include vendor('transition', (
-			'color #{_duration(transition)} ease-in-out',
-			'background-color #{_duration(transition)} ease-in-out',
-			'border-bottom-color #{_duration(transition)} ease-in-out'
-		));
-		border-bottom: dotted 1px _palette(fg-light);
+		@include vendor('transition', 'border-bottom-color #{_duration(transition)} ease-in-out');
 		text-decoration: none;
-		color: inherit;
+		color: _palette(fg-bold);
+		border-bottom: dotted 1px;
 
 		&:hover {
+			text-decoration: none;
 			border-bottom-color: transparent;
 		}
 	}
 
 	strong, b {
-		color: _palette(fg-bold);
 		font-weight: _font(weight-bold);
+		color: _palette(fg-bold);
 	}
 
 	em, i {
@@ -60,65 +67,94 @@
 
 	h1, h2, h3, h4, h5, h6 {
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
-		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		font-family: _font(family-heading);
+		font-weight: _font(weight-heading-light);
+		letter-spacing: _font(kerning-heading);
+		line-height: 1.75;
+		margin: 0 0 (_size(element-margin) * 0.75) 0;
 		text-transform: uppercase;
-		letter-spacing: _font(letter-spacing);
 
 		a {
 			color: inherit;
 			text-decoration: none;
 		}
-
-		&.major {
-			border-bottom: solid _size(border-width) _palette(border);
-			width: -moz-max-content;
-			width: -webkit-max-content;
-			width: -ms-max-content;
-			width: max-content;
-			padding-bottom: 0.5rem;
-			margin: 0 0 (_size(element-margin) * 1) 0;
-		}
 	}
 
 	h1 {
-		font-size: 2.25rem;
-		line-height: 1.3;
-		letter-spacing: _font(letter-spacing-heading);
+		font-family: _font(family);
+		font-size: 5rem;
+		font-weight: _font(weight-extrabold);
+		letter-spacing: _font(kerning-heading-alt);
+		line-height: 1.1;
+		margin: 0 0 (_size(element-margin) * 0.75) 0;
+		text-transform: none;
 	}
 
 	h2 {
-		font-size: 1.5rem;
-		line-height: 1.4;
-		letter-spacing: _font(letter-spacing-heading);
+		font-size: 1.25rem;
+		font-weight: _font(weight-heading);
+		margin: 0 0 _size(element-margin) 0;
 	}
 
 	h3 {
-		font-size: 1rem;
+		font-size: 0.875rem;
 	}
 
 	h4 {
-		font-size: 0.8rem;
+		font-size: 0.875rem;
 	}
 
 	h5 {
-		font-size: 0.7rem;
+		font-size: 0.75rem;
 	}
 
 	h6 {
-		font-size: 0.6rem;
+		font-size: 0.625rem;
 	}
 
-	@include breakpoint(small) {
+	@include breakpoint('<=small') {
 		h1 {
-			font-size: 1.75rem;
-			line-height: 1.4;
+			font-size: 4.5rem;
+			line-height: 1.1;
 		}
 
 		h2 {
-			font-size: 1.25em;
-			line-height: 1.5;
+			font-size: 1.25rem;
+			line-height: 1.7;
+		}
+
+		h3 {
+			font-size: 0.9rem;
+		}
+
+		h4 {
+			font-size: 0.75rem;
+		}
+
+		h5 {
+			font-size: 0.675rem;
+		}
+	}
+
+	@include breakpoint('<=xxsmall') {
+		h1 {
+			font-size: 3.75rem;
+		}
+
+		h2 {
+			font-size: 1.125rem;
+		}
+
+		h3 {
+			font-size: 0.8rem;
+		}
+
+		h4 {
+			font-size: 0.675rem;
+		}
+
+		h5 {
+			font-size: 0.675rem;
 		}
 	}
 
@@ -135,10 +171,10 @@
 	}
 
 	blockquote {
-		border-left: solid (_size(border-width) * 4) _palette(border);
+		border-left: solid 0.5rem _palette(border);
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
-		padding: (_size(element-margin) / 4) 0 (_size(element-margin) / 4) _size(element-margin);
+		padding: (_size(element-margin) * 0.5) 0 (_size(element-margin) * 0.5) _size(element-margin);
 	}
 
 	code {
@@ -155,6 +191,7 @@
 		font-family: _font(family-fixed);
 		font-size: 0.9rem;
 		margin: 0 0 _size(element-margin) 0;
+		width: 100%;
 
 		code {
 			display: block;
@@ -166,18 +203,16 @@
 
 	hr {
 		border: 0;
-		border-bottom: solid _size(border-width) _palette(border);
-		margin: (_size(element-margin) * 1.375) 0;
-	}
+		border-bottom: solid 2px _palette(border);
+		margin: (_size(element-margin) * 1.5) 0;
 
-	.align-left {
-		text-align: left;
-	}
+		&.major {
+			margin: (_size(element-margin) * 2.5) 0;
+		}
 
-	.align-center {
-		text-align: center;
-	}
-
-	.align-right {
-		text-align: right;
+		@include breakpoint('<=small') {
+			&.major {
+				margin: (_size(element-margin) * 1.5) 0;
+			}
+		}
 	}
