--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,5 +1,5 @@
 ///
-/// Dimension by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -12,69 +12,104 @@
 	button,
 	.button {
 		@include vendor('appearance', 'none');
-		@include vendor('transition', 'background-color #{_duration(transition)} ease-in-out, color #{_duration(transition)} ease-in-out');
+		@include vendor('transition', (
+			'background-color #{_duration(transition)} ease-in-out',
+			'box-shadow #{_duration(transition)} ease-in-out',
+			'color #{_duration(transition)} ease-in-out'
+		));
 		background-color: transparent;
 		border-radius: _size(border-radius);
 		border: 0;
-		box-shadow: inset 0 0 0 _size(border-width) _palette(border);
+		box-shadow: inset 0 0 0 2px _palette(border);
 		color: _palette(fg-bold) !important;
 		cursor: pointer;
 		display: inline-block;
-		font-size: 0.8rem;
-		font-weight: _font(weight);
-		height: _size(element-height);
-		letter-spacing: _font(letter-spacing);
-		line-height: _size(element-height);
-		outline: 0;
-		padding: 0 1.25rem 0 (1.25rem + (_font(letter-spacing) * 0.5));
+		font-family: _font(family-heading);
+		font-size: 0.6rem;
+		font-weight: _font(weight-heading-light);
+		height: (_size(element-height) * 1);
+		letter-spacing: _font(kerning-heading);
+		line-height: (_size(element-height) * 1);
+		padding: 0 2rem;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
 		white-space: nowrap;
 
 		&:hover {
-			background-color: _palette(border-bg);
+			box-shadow: inset 0 0 0 2px _palette(accent-alt);
+			color: _palette(accent-alt) !important;
 		}
 
 		&:active {
-			background-color: _palette(border-bg-alt);
+			background-color: _palette(accent-bg);
+			box-shadow: inset 0 0 0 2px _palette(accent-alt);
+			color: _palette(accent-alt) !important;
+		}
+
+		&.small {
+			font-size: 0.5rem;
+			height: _size(element-height) * 0.75;
+			line-height: _size(element-height) * 0.75;
+			padding: 0 1.25rem;
+		}
+
+		&.large {
+			font-size: 0.7rem;
+			height: _size(element-height) * 1.0875;
+			line-height: _size(element-height) * 1.0875;
+			padding: 0 3.25rem;
+		}
+
+		&.wide {
+			min-width: 13rem;
 		}
 
 		&.icon {
 			&:before {
-				margin-right: 0.5em;
+				margin-right: 0.5rem;
 			}
 		}
 
 		&.fit {
-			display: block;
-			margin: 0 0 (_size(element-margin) * 0.5) 0;
 			width: 100%;
-		}
-
-		&.special {
-			background-color: _palette(fg-bold);
-			color: _palette(bg) !important;
-			font-weight: _font(weight-bold);
-
-			&:hover {
-			}
-
-			&:active {
-			}
 		}
 
 		&.disabled,
 		&:disabled {
 			@include vendor('pointer-events', 'none');
-			cursor: default;
 			opacity: 0.25;
 		}
-	}
 
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button {
-		line-height: calc(#{_size(element-height)} - 2px);
+		&.primary {
+			background-color: _palette(accent);
+			box-shadow: none;
+			color: _palette(fg-bold) !important;
+
+			&:hover {
+				background-color: saturate(lighten(_palette(accent), 15), 10);
+			}
+
+			&:active {
+				background-color: desaturate(darken(_palette(accent), 3), 10);
+			}
+		}
+
+		@include breakpoint('<=small') {
+			font-size: 0.7rem;
+			height: (_size(element-height) * 1.1);
+			line-height: (_size(element-height) * 1.1);
+
+			&.large {
+				font-size: 0.8rem;
+				height: _size(element-height) * 1.25;
+				line-height: _size(element-height) * 1.25;
+			}
+
+			&.small {
+				font-size: 0.6rem;
+				height: (_size(element-height) * 1);
+				line-height: (_size(element-height) * 1);
+			}
+		}
 	}
