--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -1,5 +1,5 @@
 ///
-/// Dimension by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -7,87 +7,82 @@
 /* Form */
 
 	form {
-		$gutter: _size(element-margin) * 0.75;
+		margin: 0 0 _size(element-margin) 0;
 
-		margin: 0 0 (_size(element-margin) * 1.25) 0;
+		> :last-child {
+			margin-bottom: 0;
+		}
 
-		.field {
-			margin: 0 0 ($gutter * 1) 0;
+		> .fields  {
+			$gutter: _size(form-gutter);
 
-			&.half {
-				width: 50%;
-				float: left;
-				padding: 0 0 0 ($gutter * 1 * 0.5);
+			@include vendor('display', 'flex');
+			@include vendor('flex-wrap', 'wrap');
+			margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
+			width: calc(100% + #{$gutter * 2});
 
-				&.first {
-					padding: 0 ($gutter * 1 * 0.5) 0 0;
+			> .field {
+				@include vendor('flex-grow', '0');
+				@include vendor('flex-shrink', '0');
+				padding: $gutter 0 0 $gutter;
+				width: calc(100% - #{$gutter * 1});
+
+				> :last-child {
+					margin-bottom: 0;
+				}
+
+				&.half {
+					width: calc(50% - #{$gutter * 0.5});
+				}
+
+				&.third {
+					width: calc(#{100% / 3} - #{$gutter * (1 / 3)});
+				}
+
+				&.quarter {
+					width: calc(25% - #{$gutter * 0.25});
 				}
 			}
 		}
 
-		> .actions {
-			margin: ($gutter * 1.25) 0 0 0 !important;
-		}
+		@include breakpoint('<=xsmall') {
+			> .fields {
+				$gutter: (_size(element-margin) * 0.75);
 
-		@include breakpoint(small) {
-			.field {
-				margin: 0 0 ($gutter * 0.75) 0;
+				margin: ($gutter * -1) 0 _size(element-margin) ($gutter * -1);
+				width: calc(100% + #{$gutter * 2});
 
-				&.half {
-					padding: 0 0 0 ($gutter * 0.75 * 0.5);
+				> .field {
+					padding: $gutter 0 0 $gutter;
+					width: calc(100% - #{$gutter * 1});
 
-					&.first {
-						padding: 0 ($gutter * 0.75 * 0.5) 0 0;
+					&.half {
+						width: calc(100% - #{$gutter * 1});
+					}
+
+					&.third {
+						width: calc(100% - #{$gutter * 1});
+					}
+
+					&.quarter {
+						width: calc(100% - #{$gutter * 1});
 					}
 				}
 			}
-
-			> .actions {
-				margin: ($gutter * 1) 0 0 0 !important;
-			}
 		}
-
-		@include breakpoint(xsmall) {
-			.field {
-				&.half {
-					width: 100%;
-					float: none;
-					padding: 0;
-
-					&.first {
-						padding: 0;
-					}
-				}
-			}
-		}
-	}
-
-	label {
-		color: _palette(fg-bold);
-		display: block;
-		font-size: 0.8rem;
-		font-weight: _font(weight);
-		letter-spacing: _font(letter-spacing);
-		line-height: 1.5;
-		margin: 0 0 (_size(element-margin) * 0.5) 0;
-		text-transform: uppercase;
 	}
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
 	input[type="tel"],
+	input[type="search"],
+	input[type="url"],
 	select,
 	textarea {
 		@include vendor('appearance', 'none');
-		@include vendor('transition', (
-			'border-color #{_duration(transition)} ease-in-out',
-			'box-shadow #{_duration(transition)} ease-in-out',
-			'background-color #{_duration(transition)} ease-in-out'
-		));
-		background: transparent;
 		border-radius: _size(border-radius);
-		border: solid _size(border-width) _palette(border);
+		border: solid 2px _palette(border);
 		color: inherit;
 		display: block;
 		outline: 0;
@@ -100,49 +95,54 @@
 		}
 
 		&:focus {
-			background: _palette(border-bg);
-			border-color: _palette(fg-bold);
-			box-shadow: 0 0 0 _size(border-width) _palette(fg-bold);
+			border-color: _palette(accent-alt);
 		}
 	}
 
-	select {
-		option {
-			background: _palette(bg);
-			color: _palette(fg);
-		}
-	}
-
-	.select-wrapper {
-		@include icon;
+	label {
+		color: _palette(fg-bold);
 		display: block;
-		position: relative;
-
-		&:before {
-			color: _palette(border);
-			content: '\f107';
-			display: block;
-			height: _size(element-height);
-			//line-height: _size(element-height);
-			line-height: calc(#{_size(element-height)} + 0em);
-			pointer-events: none;
-			position: absolute;
-			right: 0;
-			text-align: center;
-			top: 0;
-			width: _size(element-height);
-		}
-
-		select::-ms-expand {
-			display: none;
-		}
+		font-family: _font(family-heading);
+		font-size: 0.75rem;
+		font-weight: _font(weight-heading-light);
+		letter-spacing: _font(kerning-heading);
+		line-height: 1.75;
+		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		text-transform: uppercase;
 	}
 
 	input[type="text"],
 	input[type="password"],
 	input[type="email"],
-	select {
+	input[type="tel"],
+	input[type="search"],
+	input[type="url"] {
 		height: _size(element-height);
+	}
+
+	select {
+		background-image: svg-url("<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'><path d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='#{_palette(border)}' /></svg>");
+		background-position: calc(100% - 1rem) center;
+		background-repeat: no-repeat;
+		background-size: 1.25rem;
+		height: _size(element-height);
+		padding-right: _size(element-height);
+		text-overflow: ellipsis;
+
+		option {
+			background-color: _palette(bg);
+			color: _palette(fg);
+		}
+
+		&:focus {
+			&::-ms-value {
+				background-color: transparent;
+			}
+		}
+
+		&::-ms-expand {
+			display: none;
+		}
 	}
 
 	textarea {
@@ -161,52 +161,46 @@
 
 		& + label {
 			@include icon;
-			@include vendor('user-select', 'none');
 			color: _palette(fg);
 			cursor: pointer;
 			display: inline-block;
-			font-size: 0.8rem;
+			font-family: _font(family);
+			font-size: 1rem;
 			font-weight: _font(weight);
-			margin: 0 0 (_size(element-margin) * 0.25) 0;
-			padding-left: (_size(element-height) * 0.6) + 1rem;
-			padding-right: 0.75rem;
+			letter-spacing: _font(kerning);
+			padding-left: (_size(element-height) * 0.6) + 0.875rem;
+			padding-right: 0.875rem;
 			position: relative;
+			text-transform: none;
 
 			&:before {
-				@include vendor('transition', (
-					'border-color #{_duration(transition)} ease-in-out',
-					'box-shadow #{_duration(transition)} ease-in-out',
-					'background-color #{_duration(transition)} ease-in-out'
-				));
 				border-radius: _size(border-radius);
-				border: solid _size(border-width) _palette(border);
+				border: solid 2px _palette(border);
 				content: '';
 				display: inline-block;
 				height: (_size(element-height) * 0.6);
 				left: 0;
-				//line-height: (_size(element-height) * 0.575);
-				line-height: calc(#{_size(element-height) * 0.575} + 0em);
+				line-height: (_size(element-height) * 0.575);
 				position: absolute;
 				text-align: center;
-				top: -0.125rem;
+				top: (_size(element-height) * -0.05);
 				width: (_size(element-height) * 0.6);
 			}
 		}
 
 		&:checked + label {
 			&:before {
-				background: _palette(fg-bold) !important;
-				border-color: _palette(fg-bold) !important;
-				color: _palette(bg);
 				content: '\f00c';
+				background-color: _palette(accent);
+				border-color: _palette(accent);
+				color: _palette(bg);
 			}
 		}
 
 		&:focus + label {
 			&:before {
-				background: _palette(border-bg);
-				border-color: _palette(fg-bold);
-				box-shadow: 0 0 0 _size(border-width) _palette(fg-bold);
+				border-color: _palette(accent);
+				box-shadow: 0 0 0 1px _palette(accent);
 			}
 		}
 	}
@@ -228,26 +222,47 @@
 	}
 
 	::-webkit-input-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
 	:-moz-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
 	::-moz-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
 	:-ms-input-placeholder {
-		color: _palette(fg-light) !important;
 		opacity: 1.0;
+		color: _palette(fg-light) !important;
 	}
 
-	.formerize-placeholder {
-		color: _palette(fg-light) !important;
-		opacity: 1.0;
+	@include breakpoint('<=small') {
+		label {
+			font-size: 0.675rem;
+		}
+
+		input[type="checkbox"],
+		input[type="radio"] {
+			& + label {
+				font-size: 1rem;
+			}
+		}
+	}
+
+	@include breakpoint('<=xxsmall') {
+		label {
+			font-size: 0.675rem;
+		}
+
+		input[type="checkbox"],
+		input[type="radio"] {
+			& + label {
+				font-size: 1rem;
+			}
+		}
 	}
