--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -1,5 +1,5 @@
 ///
-/// Dimension by HTML5 UP
+/// Paradigm Shift by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
@@ -9,175 +9,67 @@
 	ol {
 		list-style: decimal;
 		margin: 0 0 _size(element-margin) 0;
-		padding-left: 1.25em;
+		padding-left: 1.25rem;
 
 		li {
-			padding-left: 0.25em;
+			padding-left: 0.25rem;
 		}
 	}
 
 	ul {
 		list-style: disc;
 		margin: 0 0 _size(element-margin) 0;
-		padding-left: 1em;
+		padding-left: 1rem;
 
 		li {
-			padding-left: 0.5em;
+			padding-left: 0.325rem;
 		}
 
 		&.alt {
 			list-style: none;
 			padding-left: 0;
 
-			li {
-				border-top: solid _size(border-width) _palette(border);
-				padding: 0.5em 0;
+			> li {
+				border-top: solid 1px _palette(border);
+				padding: 0.75rem 0;
 
 				&:first-child {
 					border-top: 0;
 					padding-top: 0;
 				}
-			}
-		}
-
-		&.icons {
-			cursor: default;
-			list-style: none;
-			padding-left: 0;
-
-			li {
-				display: inline-block;
-				padding: 0 0.75em 0 0;
 
 				&:last-child {
-					padding-right: 0;
-				}
-
-				a {
-					border-radius: 100%;
-					box-shadow: inset 0 0 0 _size(border-width) _palette(border);
-					display: inline-block;
-					height: 2.25rem;
-					line-height: 2.25rem;
-					text-align: center;
-					width: 2.25rem;
-
-					&:hover {
-						background-color: _palette(border-bg);
-					}
-
-					&:active {
-						background-color: _palette(border-bg-alt);
-					}
+					padding-bottom: 0;
 				}
 			}
 		}
 
-		&.actions {
-			cursor: default;
+		&.items {
 			list-style: none;
 			padding-left: 0;
 
-			li {
-				display: inline-block;
-				padding: 0 (_size(element-margin) * 0.5) 0 0;
-				vertical-align: middle;
+			> li {
+				padding-left: 0;
+				margin: 0 0 (_size(element-margin) * 1.5) 0;
+
+				> h3 {
+					margin: 0 0 (_size(element-margin) * 0.5) 0;
+				}
+
+				> :last-child {
+					margin-bottom: 0;
+				}
 
 				&:last-child {
-					padding-right: 0;
+					margin-bottom: 0;
 				}
 			}
+		}
 
-			&.small {
-				li {
-					padding: 0 (_size(element-margin) * 0.25) 0 0;
-				}
-			}
-
-			&.vertical {
-				li {
-					display: block;
-					padding: (_size(element-margin) * 0.5) 0 0 0;
-
-					&:first-child {
-						padding-top: 0;
-					}
-
-					> * {
-						margin-bottom: 0;
-					}
-				}
-
-				&.small {
-					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
-
-						&:first-child {
-							padding-top: 0;
-						}
-					}
-				}
-			}
-
-			&.fit {
-				display: table;
-				margin-left: (_size(element-margin) * -0.5);
-				padding: 0;
-				table-layout: fixed;
-				width: calc(100% + #{(_size(element-margin) * 0.5)});
-
-				li {
-					display: table-cell;
-					padding: 0 0 0 (_size(element-margin) * 0.5);
-
-					> * {
-						margin-bottom: 0;
-					}
-				}
-
-				&.small {
-					margin-left: (_size(element-margin) * -0.25);
-					width: calc(100% + #{(_size(element-margin) * 0.25)});
-
-					li {
-						padding: 0 0 0 (_size(element-margin) * 0.25);
-					}
-				}
-			}
-
-			@include breakpoint(xsmall) {
-				margin: 0 0 _size(element-margin) 0;
-
-				li {
-					padding: (_size(element-margin) * 0.5) 0 0 0;
-					display: block;
-					text-align: center;
-					width: 100%;
-
-					&:first-child {
-						padding-top: 0;
-					}
-
-					> * {
-						width: 100%;
-						margin: 0 !important;
-
-						&.icon {
-							&:before {
-								margin-left: -2em;
-							}
-						}
-					}
-				}
-
-				&.small {
-					li {
-						padding: (_size(element-margin) * 0.25) 0 0 0;
-
-						&:first-child {
-							padding-top: 0;
-						}
-					}
+		@include breakpoint('<=small') {
+			&.items {
+				> li {
+					margin: 0 0 (_size(element-margin) * 1) 0;
 				}
 			}
 		}
@@ -193,6 +85,6 @@
 		}
 
 		dd {
-			margin-left: _size(element-margin);
+			margin-left: (_size(element-margin) * 0.75);
 		}
 	}
