--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,49 +1,52 @@
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
-@import 'libs/skel';
+@import 'libs/vendor';
+@import 'libs/breakpoints';
+@import 'libs/html-grid';
 @import 'font-awesome.min.css';
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300italic,600italic,300,600');
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600,700,300i,600i,700i|Raleway:600,800');
 
 /*
-	Dimension by HTML5 UP
+	Paradigm Shift by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-	@include skel-breakpoints((
-		xlarge:		'(max-width: 1680px)',
-		large:		'(max-width: 1280px)',
-		medium:		'(max-width: 980px)',
-		small:		'(max-width: 736px)',
-		xsmall:		'(max-width: 480px)',
-		xxsmall:	'(max-width: 360px)'
-	));
+// Breakpoints.
 
-	@include skel-layout((
-		reset: 'full',
-		boxModel: 'border'
+	@include breakpoints((
+		default:   (1681px,   null     ),
+		xlarge:    (1281px,   1920px   ),
+		large:     (1153px,   1280px   ),
+		medium:    (737px,    1152px   ),
+		small:     (481px,    736px    ),
+		xsmall:    (361px,    480px    ),
+		xxsmall:   (null,     360px    )
 	));
 
 // Base.
 
+	@import 'base/reset';
 	@import 'base/page';
 	@import 'base/typography';
 
 // Component.
 
-	@import 'components/form';
+	@import 'components/row';
 	@import 'components/box';
+	@import 'components/button';
+	@import 'components/form';
 	@import 'components/icon';
 	@import 'components/image';
 	@import 'components/list';
+	@import 'components/actions';
+	@import 'components/icons';
 	@import 'components/table';
-	@import 'components/button';
+	@import 'components/arrow';
+	@import 'components/gallery';
+	@import 'components/feature-icons';
 
 // Layout.
 
-	@import 'layout/bg';
 	@import 'layout/wrapper';
-	@import 'layout/header';
-	@import 'layout/main';
-	@import 'layout/footer';
